Stabilize environment: Python 3.11, cleaned dependencies, improved gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,50 @@
+# =============================
 # Python
+# =============================
 __pycache__/
 *.pyc
 
-# Virtual env
+# Virtual environments
 .venv/
 venv/
 
+# =============================
+# SQLite database
+# =============================
+*.db
+*.db-shm
+*.db-wal
+
+# =============================
+# Environment variables
+# =============================
+.env
+.env.*
+
+# =============================
+# Logs
+# =============================
+*.log
+logs/
+
+# =============================
 # OS junk
+# =============================
 Thumbs.db
 .DS_Store
 
+# =============================
 # RAG persistent data (DO NOT COMMIT)
+# =============================
 storage/
+
+# =============================
+# IDE
+# =============================
+.vscode/
+
+#-----------------------------
+# Back up files
+iit.py
+iit2.py
+archive.py
