--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# -----------------------------
+﻿# -----------------------------
 # Web framework
 # -----------------------------
 fastapi==0.110.3
@@ -12,7 +12,7 @@ pydantic==2.7.4
 # -----------------------------
 # OpenAI
 # -----------------------------
-openai==1.30.5
+openai==1.23.6
 
 # -----------------------------
 # LlamaIndex (runtime + controlled indexing)
@@ -20,14 +20,18 @@ openai==1.30.5
 llama-index-core==0.10.52.post1
 llama-index-llms-openai==0.1.26
 llama-index-embeddings-openai==0.1.9
+llama-index-readers-file==0.1.33
+httpx==0.27.0
 
 # -----------------------------
 # PDF ingestion (indexing only)
 # -----------------------------
 pypdf==4.2.0
+python-multipart==0.0.22
 
 # -----------------------------
 # Utilities / retries
 # -----------------------------
 requests==2.31.0
 tenacity==8.5.0
+cryptography==42.0.8
